--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#img_list {
-    display: inline-block
+.images{
+    display: inline-block;
+    width: 400px;
+    height: 400px;
+    padding: 5px;
 }
